--- a/styles.css
+++ b/styles.css
@@ -95,6 +95,7 @@ section {
 
 /* Navbar Styles */
 .navbar {
+  width: 100%;
   transition: all var(--transition-speed);
   padding: 20px 0;
   background-color: transparent;
@@ -116,9 +117,15 @@ section {
   color: var(--primary-color);
 }
 
-.navbar-toggler {
+.navbar-toggler{
   border: none;
-  color: var(--text-light);
+  color: #fff;
+  background-color: var(--primary-color);
+  
+}
+
+.navbar-toggler:hover{
+ background-color: var(--primary-color);
 }
 
 .navbar-toggler:focus {
@@ -157,6 +164,7 @@ section {
 /* Hero Section */
 .hero {
   height: 100vh;
+  width: 100%;
   background-color: var(--secondary-color);
   color: var(--text-light);
   position: relative;
@@ -166,6 +174,7 @@ section {
 }
 
 .network-canvas {
+  width: 100%;
   position: absolute;
   top: 0;
   left: 0;
@@ -692,6 +701,9 @@ section {
 }
 
 @media (max-width: 767.98px) {
+     .network-canvas{
+        width: 100%;
+    }
   section {
     padding: 80px 0;
   }
@@ -735,6 +747,9 @@ section {
 }
 
 @media (max-width: 575.98px) {
+    .network-canvas{
+        width: 100%;
+    }
   .navbar-brand {
     font-size: 1.2rem;
   }
